# scrum.md

./: .gitignore  AGENTS.md  README.md  mdbind.md  pyproject.toml  specification.md
.smd/: config.yml
scrum/: CONSTITUTION.md  architecture.md  backlog.md  decisions.md  experience.md  sprints.md
scrum/backlog/: B-001.md  B-002.md  B-003.md  B-004.md  B-005.md  B-006.md  B-007.md  B-008.md  B-009.md
scrum/sprints/: SPR-2026-01.md  SPR-2026-02.md  SPR-2026-03.md  SPR-2026-04.md  SPR-2026-05.md  SPR-2026-06.md  SPR-2026-07.md  SPR-2026-08.md
smd/: __init__.py  cli.py  config.py  memory.py  output.py  template_packages.py  templates.py
smd/templates/default/: CONSTITUTION.md.j2
smd/templates/default/scrum/: architecture.md.j2  backlog.md.j2  backlog_item.md.j2  decision.md.j2  decisions.md.j2  experience.md.j2  experience_record.md.j2  sprint.md.j2  sprints.md.j2
templates/default/: CONSTITUTION.md  CONSTITUTION.md.j2  manifest.yaml
templates/default/scrum/: CONSTITUTION.md.j2  architecture.md.j2  backlog.md  backlog.md.j2  decisions.md  decisions.md.j2  experience.md  experience.md.j2  sprints.md  sprints.md.j2
templates/default/scrum/instructions/: LLM.md
tests/: __init__.py  test_cli.py  test_memory.py  test_templates.py
